# Phase-Space-Structure-for-Einstein-Field-Equations

./: LICENSE  README.md  pyproject.toml  requirements.txt  run_experiments.py  run_pipeline_full.ipynb  verify_results.py
Results/metadata/: run_metadata.json
Results/tables/: all_diagnostics.csv  bianchi_sweep.csv  constraint_contamination.csv  domain_dependence.csv  dominant_driver_counts.csv  ltb_amplitude_sweep.csv  ltb_resolution.csv  observer_tilt.csv  pca_projection.csv  regime_counts.csv
phase_space_efe/: __init__.py  benchmarks.py  core.py  figures.py  pipeline.py
scripts/: quick_diagnostic.py
tests/: test_invariants.py
